[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/logo.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/font_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/UI/ui_controller_support.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/ui_theme.tres" type="Theme" id=5]
[ext_resource path="res://components/Leaderboard.tscn" type="PackedScene" id=6]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Header" type="Node2D" parent="CanvasLayer"]
editor/display_folded = true

[node name="logo" type="Sprite" parent="CanvasLayer/Header"]
position = Vector2( 636.304, 152.776 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Credits" type="Label" parent="CanvasLayer/Header"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 407.376
margin_top = 277.587
margin_right = 876.376
margin_bottom = 296.587
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "A game by Bauke Regnerus"
align = 1

[node name="ui_controller_support" type="Sprite" parent="CanvasLayer/Header"]
position = Vector2( 982.264, 71.8542 )
texture = ExtResource( 4 )

[node name="Menu" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 90.0463
margin_top = 335.747
margin_right = 308.046
margin_bottom = 635.747
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="StartButton" type="Button" parent="CanvasLayer/Menu"]
margin_right = 218.0
margin_bottom = 56.0
text = "Score attack"

[node name="ChilloutButton" type="Button" parent="CanvasLayer/Menu"]
margin_top = 60.0
margin_right = 218.0
margin_bottom = 116.0
text = "Chillout"

[node name="QuitButton" type="Button" parent="CanvasLayer/Menu"]
margin_top = 120.0
margin_right = 218.0
margin_bottom = 176.0
text = "Quit"
__meta__ = {
"_edit_group_": true
}

[node name="FullscreenCheckbox" type="CheckBox" parent="CanvasLayer/Menu"]
margin_top = 180.0
margin_right = 218.0
margin_bottom = 236.0
text = "Fullscreen"

[node name="TutorialCheckbox" type="CheckBox" parent="CanvasLayer/Menu"]
visible = false
margin_top = 195.0
margin_right = 236.0
margin_bottom = 256.0
text = "Tutorial"

[node name="MusicVolumeLabel" type="Label" parent="CanvasLayer/Menu"]
margin_top = 240.0
margin_right = 218.0
margin_bottom = 280.0
text = "Audio volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="CanvasLayer/Menu"]
margin_top = 284.0
margin_right = 218.0
margin_bottom = 300.0
min_value = -70.0
max_value = 0.0
ticks_on_borders = true

[node name="LanguageDropdown" type="OptionButton" parent="CanvasLayer/Menu"]
visible = false
margin_top = 329.0
margin_right = 236.0
margin_bottom = 390.0

[node name="InputDeviceDropdown" type="OptionButton" parent="CanvasLayer/Menu"]
visible = false
margin_top = 329.0
margin_right = 236.0
margin_bottom = 390.0

[node name="Leaderboard" parent="CanvasLayer" instance=ExtResource( 6 )]
position = Vector2( 911.064, 344.682 )
